@@ -6,11 +6,12 @@ ClassCount=2
 Class1=CMod_fisherApp
 LastClass=CConfigDialog
 NewFileInclude2=#include "mod_fisher.h"
-ResourceCount=1
+ResourceCount=2
 NewFileInclude1=#include "stdafx.h"
 Class2=CConfigDialog
 LastTemplate=CDialog
 Resource1=IDD_CONFIG
+Resource2=IDD_CONFIG (Polish)
 
 [CLS:CMod_fisherApp]
 Type=0
@@ -42,4 +43,21 @@ BaseClass=CDialog
 Filter=D
 VirtualFilter=dWC
 LastObject=IDC_AUTOFISH_WHENCAP
+
+[DLG:IDD_CONFIG (Polish)]
+Type=1
+Class=?
+ControlCount=12
+Control1=IDOK,button,1342242817
+Control2=IDC_ENABLE,button,1342246915
+Control3=IDC_STATIC,static,1342308352
+Control4=IDC_STATIC,static,1342308352
+Control5=IDC_AUTOFISH_TIME,static,1342308352
+Control6=IDC_AUTOFISH_QTY,static,1342308364
+Control7=IDC_AUTOFISH_MOVETOCONT,button,1342242819
+Control8=IDC_STATIC,static,1342308352
+Control9=IDC_AUTOFISH_FISHYWATER,static,1342308352
+Control10=IDC_STATIC,static,1342308864
+Control11=IDC_FISH_CAP,edit,1350631552
+Control12=IDC_AUTOFISH_FISH_WHEN_WORMS,button,1342242819
 
