@@ -6,26 +6,14 @@
 --------------------Configuration: mod_fisher - Win32 Debug--------------------
 </h3>
 <h3>Command Lines</h3>
-Creating command line "rc.exe /l 0x415 /fo"Debug/mod_fisher.res" /d "_DEBUG" /d "_AFXDLL" "F:\projects\tibiaauto-branch-1-6\mods\mod_fisher\mod_fisher.rc"" 
-Creating temporary file "E:\DOCUME~1\ADMINI~2.VAN\USTAWI~1\Temp\RSP4E3.tmp" with contents
+Creating temporary file "C:\DOCUME~1\Owner\LOCALS~1\Temp\RSP276.tmp" with contents
 [
 /nologo /MDd /W3 /Gm /GX /ZI /Od /I "..\..\sdk" /D "WIN32" /D "_DEBUG" /D "_WINDOWS" /D "_WINDLL" /D "_AFXDLL" /D "_MBCS" /D "_USRDLL" /Fp"Debug/mod_fisher.pch" /Yu"stdafx.h" /Fo"Debug/" /Fd"Debug/" /FD /GZ /c 
-"F:\projects\tibiaauto-branch-1-6\mods\mod_fisher\ConfigData.cpp"
-"F:\projects\tibiaauto-branch-1-6\mods\mod_fisher\ConfigDialog.cpp"
-"F:\projects\tibiaauto-branch-1-6\mods\mod_fisher\exports.cpp"
-"F:\projects\tibiaauto-branch-1-6\mods\mod_fisher\mod_fisher.cpp"
-"F:\projects\tibiaauto-branch-1-6\mods\mod_fisher\proxy.cpp"
-"F:\projects\tibiaauto-branch-1-6\mods\mod_fisher\TibiaItem_impl.cpp"
-"F:\projects\tibiaauto-branch-1-6\mods\mod_fisher\TibiaContainer_impl.cpp"
+"C:\Documents and Settings\Owner\My Documents\TibiaAuto\tibiaauto-pub\mods\mod_fisher\ConfigDialog.cpp"
+"C:\Documents and Settings\Owner\My Documents\TibiaAuto\tibiaauto-pub\mods\mod_fisher\mod_fisher.cpp"
 ]
-Creating command line "cl.exe @E:\DOCUME~1\ADMINI~2.VAN\USTAWI~1\Temp\RSP4E3.tmp" 
-Creating temporary file "E:\DOCUME~1\ADMINI~2.VAN\USTAWI~1\Temp\RSP4E4.tmp" with contents
-[
-/nologo /MDd /W3 /Gm /GX /ZI /Od /I "..\..\sdk" /D "WIN32" /D "_DEBUG" /D "_WINDOWS" /D "_WINDLL" /D "_AFXDLL" /D "_MBCS" /D "_USRDLL" /Fp"Debug/mod_fisher.pch" /Yc"stdafx.h" /Fo"Debug/" /Fd"Debug/" /FD /GZ /c 
-"F:\projects\tibiaauto-branch-1-6\mods\mod_fisher\StdAfx.cpp"
-]
-Creating command line "cl.exe @E:\DOCUME~1\ADMINI~2.VAN\USTAWI~1\Temp\RSP4E4.tmp" 
-Creating temporary file "E:\DOCUME~1\ADMINI~2.VAN\USTAWI~1\Temp\RSP4E5.tmp" with contents
+Creating command line "cl.exe @C:\DOCUME~1\Owner\LOCALS~1\Temp\RSP276.tmp" 
+Creating temporary file "C:\DOCUME~1\Owner\LOCALS~1\Temp\RSP277.tmp" with contents
 [
 /nologo /subsystem:windows /dll /incremental:yes /pdb:"Debug/mod_fisher.pdb" /debug /machine:I386 /def:".\mod_fisher.def" /out:"../mod_fisher.dll" /implib:"Debug/mod_fisher.lib" /pdbtype:sept 
 ".\Debug\ConfigData.obj"
@@ -34,33 +22,22 @@ Creating temporary file "E:\DOCUME~1\ADMINI~2.VAN\USTAWI~1\Temp\RSP4E5.tmp" with
 ".\Debug\mod_fisher.obj"
 ".\Debug\proxy.obj"
 ".\Debug\StdAfx.obj"
+".\Debug\TibiaContainer_impl.obj"
 ".\Debug\TibiaItem_impl.obj"
 ".\Debug\mod_fisher.res"
-".\Debug\TibiaContainer_impl.obj"
 ]
-Creating command line "link.exe @E:\DOCUME~1\ADMINI~2.VAN\USTAWI~1\Temp\RSP4E5.tmp"
+Creating command line "link.exe @C:\DOCUME~1\Owner\LOCALS~1\Temp\RSP277.tmp"
 <h3>Output Window</h3>
-Compiling resources...
 Compiling...
-StdAfx.cpp
-Compiling...
-ConfigData.cpp
 ConfigDialog.cpp
-exports.cpp
 mod_fisher.cpp
-proxy.cpp
-f:\projects\tibiaauto-branch-1-6\sdk\moduleutil.cpp(41) : warning C4018: '==' : signed/unsigned mismatch
-f:\projects\tibiaauto-branch-1-6\sdk\moduleutil.cpp(74) : warning C4018: '==' : signed/unsigned mismatch
-TibiaItem_impl.cpp
-TibiaContainer_impl.cpp
 Generating Code...
 Linking...
-   Creating library Debug/mod_fisher.lib and object Debug/mod_fisher.exp
 
 
 
 <h3>Results</h3>
-mod_fisher.dll - 0 error(s), 2 warning(s)
+mod_fisher.dll - 0 error(s), 0 warning(s)
 </pre>
 </body>
 </html>
